--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "ffmpeg-python (>=0.2.0,<0.3.0)",
     "soundfile (>=0.13.1,<0.14.0)",
     "numpy (>=2.3.2,<3.0.0)",
-    "pandas (>=2.3.1,<3.0.0)"
+    "pandas (>=2.3.1,<3.0.0)",
+    "tqdm (>=4.67.1,<5.0.0)",
+    "librosa (^0.11.0)"
 ]
 
 
