--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,17 @@ dependencies = [
     "torchaudio (>=2.7.1,<3.0.0)",
     "ffmpeg-python (>=0.2.0,<0.3.0)",
     "soundfile (>=0.13.1,<0.14.0)",
-    "numpy (>=2.3.2,<3.0.0)",
+    "numpy (>=2.2.3,<2.3.0)",
     "pandas (>=2.3.1,<3.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
-    "librosa (^0.11.0)"
+    "librosa (>=0.11.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.4.1"
+
